[gd_scene load_steps=42 format=3 uid="uid://d1mad1y7664pt"]

[ext_resource type="Script" path="res://grenade_shell.gd" id="1_4lwuq"]
[ext_resource type="Texture2D" uid="uid://cfm4b2tui56ag" path="res://addons/Spillutvikling/kenney_particle_pack/star_06.png" id="2_nv0t1"]
[ext_resource type="Material" uid="uid://dn3o4behf0ec2" path="res://Explosjon_sparks_material.tres" id="3_a4fgb"]
[ext_resource type="Texture2D" uid="uid://dns8lnsdotesx" path="res://addons/Spillutvikling/kenney_particle_pack/star_09.png" id="4_hopce"]
[ext_resource type="AudioStream" uid="uid://clmi1lnxc66xv" path="res://explosion-80108.mp3" id="5_kflll"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_sgs1d"]
bounce = 20.0

[sub_resource type="SphereShape3D" id="SphereShape3D_1hp4p"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mshhl"]
radius = 0.125
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s2hil"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_igg2a"]
top_radius = 0.2
bottom_radius = 0.05
height = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y8nxp"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wng1w"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_c8w6i"]
gravity = Vector3(0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kwro1"]
transparency = 1
albedo_texture = ExtResource("2_nv0t1")
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.7
billboard_mode = 1

[sub_resource type="PlaneMesh" id="PlaneMesh_budg7"]
material = SubResource("StandardMaterial3D_kwro1")
size = Vector2(3, 3)
orientation = 2

[sub_resource type="Curve" id="Curve_cdjoo"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_rw8ga"]
max_value = 5.0
_data = [Vector2(0, 5), 0.0, 0.0, 0, 0, Vector2(1, 5), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_w4cio"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_duks3"]
curve_x = SubResource("Curve_cdjoo")
curve_y = SubResource("Curve_rw8ga")
curve_z = SubResource("Curve_w4cio")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_60f5c"]
particle_flag_align_y = true
emission_shape = 1
emission_sphere_radius = 0.2
spread = 180.0
initial_velocity_min = 15.0
initial_velocity_max = 20.0
gravity = Vector3(0, -20, 0)
scale_min = 0.15
scale_max = 0.5
scale_curve = SubResource("CurveXYZTexture_duks3")
color = Color(5, 2, 1, 1)
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="QuadMesh" id="QuadMesh_y0lv1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ng3jd"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("4_hopce")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_dj1yw"]
_data = [Vector2(0, 1), 0.0, -0.0102479, 0, 0, Vector2(1, 0), -1.44869, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_jsuok"]
curve = SubResource("Curve_dj1yw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_y5nye"]
gravity = Vector3(0, 0, 0)
scale_min = 4.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_jsuok")
color = Color(2.5, 1, 0.5, 1)

[sub_resource type="QuadMesh" id="QuadMesh_h3ra3"]

[sub_resource type="Gradient" id="Gradient_mh4qu"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7er4x"]
gradient = SubResource("Gradient_mh4qu")

[sub_resource type="Curve" id="Curve_ux4d2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.9387, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_xutw1"]
curve = SubResource("Curve_ux4d2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_o7isw"]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 0.4
spread = 180.0
initial_velocity_min = 0.5
initial_velocity_max = 2.0
gravity = Vector3(0, -2, 0)
scale_min = 0.75
scale_max = 1.5
scale_curve = SubResource("CurveTexture_xutw1")
color = Color(5, 2, 1, 1)
color_ramp = SubResource("GradientTexture1D_7er4x")

[sub_resource type="QuadMesh" id="QuadMesh_bcram"]

[sub_resource type="Curve" id="Curve_616ii"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.47847, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_4n56n"]
curve = SubResource("Curve_616ii")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cimiv"]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 0.4
spread = 180.0
initial_velocity_min = 0.5
initial_velocity_max = 2.0
gravity = Vector3(0, 0, 0)
scale_min = 3.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_4n56n")
color = Color(0, 0, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_eor8n"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jnx43"]
direction = Vector3(0, 1, 0)
spread = 180.0
initial_velocity_min = 0.5
initial_velocity_max = 2.0
gravity = Vector3(0, 0, 20)

[sub_resource type="Gradient" id="Gradient_oh13b"]
colors = PackedColorArray(0.960784, 0.568627, 0.0392157, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xlmib"]
gradient = SubResource("Gradient_oh13b")
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p0kh7"]
transparency = 1
blend_mode = 1
albedo_color = Color(0.945098, 0.717647, 0.266667, 1)
albedo_texture = SubResource("GradientTexture2D_xlmib")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_j0ieo"]
material = SubResource("StandardMaterial3D_p0kh7")
size = Vector2(0.25, 0.25)

[node name="Grenade Shell" type="RigidBody3D"]
mass = 30.0
physics_material_override = SubResource("PhysicsMaterial_sgs1d")
gravity_scale = 2.0
contact_monitor = true
max_contacts_reported = 100
script = ExtResource("1_4lwuq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("SphereShape3D_1hp4p")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CapsuleMesh_mshhl")
surface_material_override/0 = SubResource("StandardMaterial3D_s2hil")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -7.90831e-09, 0.180921)
mesh = SubResource("CylinderMesh_igg2a")
surface_material_override/0 = SubResource("StandardMaterial3D_y8nxp")

[node name="eksplosjon" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00992236, -0.0109523)
process_material = SubResource("ParticleProcessMaterial_wng1w")

[node name="Star" type="GPUParticles3D" parent="eksplosjon"]
emitting = false
amount = 1
lifetime = 5.0
one_shot = true
process_material = SubResource("ParticleProcessMaterial_c8w6i")
draw_pass_1 = SubResource("PlaneMesh_budg7")

[node name="Sparks" type="GPUParticles3D" parent="eksplosjon"]
material_override = ExtResource("3_a4fgb")
emitting = false
amount = 20
lifetime = 0.6
one_shot = true
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_60f5c")
draw_pass_1 = SubResource("QuadMesh_y0lv1")

[node name="Flash" type="GPUParticles3D" parent="eksplosjon"]
material_override = SubResource("StandardMaterial3D_ng3jd")
emitting = false
amount = 1
lifetime = 0.1
one_shot = true
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_y5nye")
draw_pass_1 = SubResource("QuadMesh_h3ra3")

[node name="Fire" type="GPUParticles3D" parent="eksplosjon"]
material_override = ExtResource("3_a4fgb")
emitting = false
amount = 13
lifetime = 0.55
one_shot = true
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_o7isw")
draw_pass_1 = SubResource("QuadMesh_bcram")

[node name="Smoke" type="GPUParticles3D" parent="eksplosjon"]
material_override = ExtResource("3_a4fgb")
emitting = false
amount = 10
lifetime = 0.8
one_shot = true
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_cimiv")
draw_pass_1 = SubResource("QuadMesh_eor8n")

[node name="Fire Trail" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00574932, 0.336386)
amount = 200
lifetime = 0.2
process_material = SubResource("ParticleProcessMaterial_jnx43")
draw_pass_1 = SubResource("QuadMesh_j0ieo")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00574932, 0.336386)
light_color = Color(0.994141, 0.662993, 0.275719, 1)
light_energy = 0.2

[node name="GrenadeTimer" type="Timer" parent="."]
one_shot = true

[node name="Explode sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_kflll")
volume_db = 80.0
unit_size = 42.3
pitch_scale = 1.4
bus = &"Explode"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
